Cannot link WebKitTestRunner in non-unified builds https://bugs.webkit.org/show_bug.cgi?id=240755

Reviewed by Adrian Perez de Castro.

In GTK non-unified build, WebKit shared library didn't export all
WEBCORE_EXPORT marked WebCore symbols because WebCore was a static
library.

WebCore should be an SHARED or OBJECT library to work WEBCORE_EXPORT
macro as expected.

* Source/WebCore/PlatformGTK.cmake:
* Source/WebCore/page/gtk/DragControllerGtk.cpp:
* Source/WebKit/WebProcess/WebPage/gtk/WebPrintOperationGtk.cpp:
* Source/cmake/OptionsGTK.cmake:
* Source/cmake/OptionsWPE.cmake:

Canonical link: https://commits.webkit.org/251011@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294881 268f45cc-cd09-0410-ab3c-d52691b4dbfc