Source/WebCore/page/gtk/DragControllerGtk.cpp
@@ -32,6 +32,7 @@
 #include "Editor.h"
 #include "Element.h"
 #include "Frame.h"
+#include "FrameDestructionObserverInlines.h"
 #include "Pasteboard.h"
 #include "markup.h"
 
